--- a/appConfig.json
+++ b/appConfig.json
@@ -1,7 +1,7 @@
 {
-  "reloadAllDB": true,
-  "reloadBankNamesDB": true,
-  "reloadBankDetailsDB": true
+  "reloadAllDB": false,
+  "reloadBankNamesDB": false,
+  "reloadBankDetailsDB": false
 }
 
 
