--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "bluebird": "^3.5.1",
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
+        "dialogflow-fulfillment": "^0.5.0",
         "express": "~4.16.0",
         "fs-extra": "^7.0.0",
         "fs-extra-promise": "^1.0.1",
