--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "actions-on-google": "^2.3.0",
         "bluebird": "^3.5.1",
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
