Changes to views to insert div elements instead of reloading the entire page

--- a/package.json
+++ b/package.json
@@ -6,35 +6,40 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "actions-on-google": "^2.3.0",
-        "bluebird": "^3.5.1",
+        "@types/handlebars": "^4.0.39",
+        "actions-on-google": "^2.4.1",
+        "ajv": "^6.5.4",
+        "ajv-keywords": "^3.2.0",
+        "bluebird": "^3.5.2",
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "dialogflow-fulfillment": "^0.5.0",
         "express": "~4.16.0",
+        "express-handlebars": "^3.0.0",
         "fs-extra": "^7.0.0",
         "fs-extra-promise": "^1.0.1",
+        "handlebars": "^4.0.12",
         "hbs": "~4.0.1",
         "hoek": "^4.2.1",
         "http-errors": "~1.6.2",
         "i": "^0.3.6",
         "loadash": "^1.0.0",
-        "lodash": "^4.17.10",
+        "lodash": "^4.17.11",
         "mnemonist": "^0.23.0",
-        "mongodb": "^3.1.1",
-        "mongoose": "^5.2.6",
-        "morgan": "~1.9.0",
-        "npm": "^6.2.0",
-        "papaparse": "^4.6.0",
+        "mongodb": "^3.1.7",
+        "mongoose": "^5.3.2",
+        "morgan": "^1.9.1",
+        "npm": "^6.4.1",
+        "papaparse": "^4.6.1",
         "parse-json": "^4.0.0",
-        "semantic-ui": "^2.3.3",
+        "semantic-ui": "^2.4.0",
         "symbol-tree": "^3.2.2",
         "tree-model": "^1.0.7",
         "typescript": "^2.9.2"
     },
     "devDependencies": {
-        "@types/node": "^10.5.5",
-        "gulp": "^3.9.1",
+        "@types/node": "^10.11.6",
+        "gulp": "^4.0.0",
         "typescript": "^2.9.2"
     }
 }
