--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "ajv-keywords": "^3.2.0",
         "bluebird": "^3.5.2",
         "clipboard": "^2.0.1",
+        "connect-mongo": "^2.0.3",
+        "connect-mongodb-session": "^2.1.1",
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "decompress": "^4.2.0",
         "dialogflow-fulfillment": "^0.5.0",
         "express": "~4.16.0",
         "express-handlebars": "^3.0.0",
+        "express-session": "^1.16.1",
         "fs-extra": "^7.0.0",
         "fs-extra-promise": "^1.0.1",
         "handlebars": "^4.0.12",
@@ -36,6 +39,7 @@
         "parse-json": "^4.0.0",
         "redis": "^2.8.0",
         "semantic-ui": "^2.4.0",
+        "session-file-store": "^1.2.0",
         "symbol-tree": "^3.2.2",
         "tree-model": "^1.0.7",
         "typescript": "^2.9.2",
