--- a/appConfig.json
+++ b/appConfig.json
@@ -1,7 +1,7 @@
 {
-  "reloadAllDB": false,
-  "reloadBankNamesDB": false,
-  "reloadBankDetailsDB":false
+  "reloadAllDB": true,
+  "reloadBankNamesDB": true,
+  "reloadBankDetailsDB": true
 }
 
 
