--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "ajv-keywords": "^3.2.0",
         "bluebird": "^3.5.2",
         "clipboard": "^2.0.1",
+        "compression": "^1.7.4",
         "connect-mongo": "^2.0.3",
         "connect-mongodb-session": "^2.1.1",
         "cookie-parser": "~1.4.3",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
         "decompress": "^4.2.0",
         "dialogflow-fulfillment": "^0.5.0",
@@ -37,6 +39,7 @@
         "npm": "^6.4.1",
         "papaparse": "^4.6.1",
         "parse-json": "^4.0.0",
+        "react-device-detect": "^1.6.2",
         "redis": "^2.8.0",
         "semantic-ui": "^2.4.0",
         "session-file-store": "^1.2.0",
